[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/WhiteBar.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Night.gd" type="Script" id=2]
[ext_resource path="res://UI/Gradient.png" type="Texture" id=3]

[sub_resource type="BoxShape" id=1]

[node name="Night" type="Spatial"]
script = ExtResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 5 )
projection = 1
size = 10.0

[node name="Line1" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1.8, 0, 0, 0, 1, -1.5, 5.5, -2.362 )
texture = ExtResource( 1 )

[node name="DisplayLine" type="Sprite3D" parent="Line1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0365937 )
visible = false
texture = ExtResource( 3 )

[node name="Line2" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1.8, 0, 0, 0, 1, -0.5, 5.5, -2.362 )
texture = ExtResource( 1 )

[node name="DisplayLine" type="Sprite3D" parent="Line2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0390255 )
visible = false
texture = ExtResource( 3 )

[node name="Line3" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1.8, 0, 0, 0, 1, 0.5, 5.5, -2.362 )
texture = ExtResource( 1 )

[node name="DisplayLine" type="Sprite3D" parent="Line3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0390255 )
visible = false
texture = ExtResource( 3 )

[node name="Line4" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1.8, 0, 0, 0, 1, 1.5, 5.5, -2.362 )
texture = ExtResource( 1 )

[node name="DisplayLine" type="Sprite3D" parent="Line4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0390255 )
visible = false
texture = ExtResource( 3 )

[node name="Miss Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.448635, -1.45142 )

[node name="CollisionShape" type="CollisionShape" parent="Miss Area"]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Perfect Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.641174, -1.45142 )

[node name="CollisionShape" type="CollisionShape" parent="Perfect Area"]
transform = Transform( 2, 0, 0, 0, 0.1, 0, 0, 0, 1, 0, 0.385225, 0 )
shape = SubResource( 1 )

[node name="Hit Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.839842, -1.45142 )

[node name="CollisionShape" type="CollisionShape" parent="Hit Area"]
transform = Transform( 2, 0, 0, 0, 0.1, 0, 0, 0, 1, 0, 0.385225, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Hit Area"]

[node name="HitLabel" type="Label3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.28034, 1.61947, -1 )
pixel_size = 0.1
text = "00"

[node name="PerfectLabel" type="Label3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.28034, 3.12661, -1 )
pixel_size = 0.1
text = "00"

[node name="ComboLabel" type="Label3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.28034, 4.71073, -1 )
pixel_size = 0.1
text = "00"

[node name="BestComboLabel" type="Label3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.28034, 6.16905, -1 )
pixel_size = 0.1
text = "00"

[connection signal="body_entered" from="Miss Area" to="." method="_on_Miss_Area_body_entered"]
